# paradicms

./: .dockerignore  .eslintignore  .eslintrc.js  .gitignore  .prettierrc  Dockerfile  LICENSE  README.md  lerna.json  package-lock.json  package.json  pylintrc  pyproject.toml  requirements.txt  setup.cfg  tsconfig.base.json
lib/py/etl/: etl_github_action.py  pyproject.toml  setup.cfg
lib/py/etl/paradicms_etl/: canonicalizer.py  deduplicator.py  enricher.py  etl_github_action.py  extractor.py  github_action.py  github_action_inputs.py  loader.py  model.py  pipeline.py  transformer.py  validation_result.py  validator.py
lib/py/etl/paradicms_etl/enrichers/: ambient_reference_enricher.py  creative_commons_licenses_enricher.py  enricher_factory.py  getty_enricher.py  metmuseum_enricher.py  ncsu_enricher.py  rights_statements_dot_org_rights_statements_enricher.py  wikidata_enricher.py  wikimedia_commons_enricher.py  yale_enricher.py
lib/py/etl/paradicms_etl/extractors/: airtable_extractor.py  costume_core_data_airtable_extractor.py  costume_core_ontology_airtable_extractor.py  directory_extractor.py  excel_2010_extractor.py  existing_file_extractor.py  google_sheets_extractor.py  luna_extractor.py  markdown_directory_extractor.py  nop_extractor.py  oai_pmh_extractor.py  omeka_classic_extractor.py  rdf_file_extractor.py  rdf_url_extractor.py  wikidata_entity_extractor.py  wikidata_qid_extractor.py
lib/py/etl/paradicms_etl/loaders/: buffering_loader.py  composite_loader.py  costume_core_ontology_py_loader.py  costume_core_ontology_rdf_file_loader.py  excel_2010_loader.py  markdown_directory_loader.py  nop_loader.py  rdf_file_loader.py
lib/py/etl/paradicms_etl/models/: agent.py  anonymous_location.py  app_configuration.py  collection.py  concept.py  costume_core_ontology.py  creative_commons_licenses.py  date_time_description.py  date_time_union.py  event.py  image.py  image_data.py  images_mixin.py  institution.py  license.py  location.py  model_singletons.py  named_location.py  named_model.py  named_value.py  organization.py  person.py  property.py  property_group.py  resource_backed_model.py  resource_backed_model_mixin.py  resource_backed_named_model.py  rights.py  rights_mixin.py  rights_statement.py  rights_statements_dot_org_rights_statements.py  root_model.py  root_model_classes.py  root_model_classes_by_name.py  text.py  work.py  work_closing.py  work_creation.py  work_event.py  work_opening.py  (+2 more)
lib/py/etl/paradicms_etl/namespaces/: __init__.py  bind_namespaces.py  cc.py  cms.py  coco.py  configuration.py  crm.py  dig.py  la.py  sdohttp.py  time.py  vra.py  wd.py  wdt.py  wgs.py  wikibase.py
lib/py/etl/paradicms_etl/pipelines/: composite_pipeline.py  costume_core_ontology_airtable_pipeline.py  costume_core_ontology_airtable_to_ontology_rdf_pipeline.py  costume_core_ontology_airtable_to_paradicms_rdf_pipeline.py  costume_core_ontology_airtable_to_worksheet_rdf_pipeline.py  costume_core_template_pipeline.py  creative_commons_pipeline.py  omeka_classic_pipeline.py  rights_statements_dot_org_pipeline.py  synthetic_data_pipeline.py  test_data_pipeline.py  vccc_high_quality_pipeline.py  vccc_pipeline.py  wikidata_qid_to_markdown_directory_pipeline.py
lib/py/etl/paradicms_etl/transformers/: _wikidata_items_transformer.py  airtable_transformer.py  ambient_reference_transformer.py  costume_core_data_airtable_transformer.py  costume_core_models_to_paradicms_models_transformer.py  costume_core_omeka_classic_transformer.py  costume_core_ontology_airtable_to_costume_core_models_transformer.py  costume_core_ontology_airtable_to_paradicms_models_transformer.py  costume_core_ontology_airtable_to_worksheet_models_transformer.py  costume_core_ontology_airtable_transformer.py  directory_transformer.py  luna_transformer.py  markdown_directory_transformer.py  nop_transformer.py  omeka_classic_transformer.py  rdf_conjunctive_graph_transformer.py  spreadsheet_transformer.py  ssg_transformer.py  validation_transformer.py  vccc_transformer.py  wikidata_item_transformer.py  wikidata_items_transformer.py
lib/py/etl/paradicms_etl/utils/: canonicalize_wikidata_entity_uri.py  clone_graph.py  dict_to_resource_transformer.py  download_file.py  existing_directory_argument_type.py  file_cache.py  match_url.py  (+17 more)
lib/py/etl/script/: bootstrap  format  test
lib/py/etl/test-results/: junit.xml
lib/py/nlp/: pyproject.toml  setup.cfg
lib/py/nlp/script/: cibuild  format  test
lib/py/nlp/tests/: conftest.py
lib/py/ssg/: pyproject.toml
lib/py/ssg/paradicms_ssg/: app_package.py  deployer.py  file_cache.py  git_hub_action.py  github_action.py  github_action_inputs.py  github_actions_inputs.py  image_archiver.py  image_file_cache.py  images_archiver.py  model_standardizer.py  original_image_file_cache.py  static_site_generator.py
lib/py/ssg/script/: bootstrap  cibuild  format  test
lib/py/ssg/test/: file_cache_test.py
loader/: .gitignore  pyproject.toml  setup.cfg
loader/paradicms_gui/: _deployer.py  _gui_deployer.py  aws_site_creator.py  deployer.py  file_cache.py  image_archiver.py
loader/paradicms_gui/deployers/: fs_deployer.py  s3_deployer.py
loader/paradicms_gui/gui_deployers/: fs_gui_deployer.py  s3_gui_deployer.py
loader/paradicms_gui/image_archivers/: fs_image_archiver.py  s3_image_archiver.py
loader/paradicms_gui/loaders/: app_package.py  gui_images_loader.py  gui_loader.py  gui_original_image_file_cache.py  gui_package.py
loader/paradicms_gui/models/: gui_metadata.py
loader/paradicms_gui/utils/: get_generic_file_mime_type.py  thumbnail_image.py
loader/script/: README.md  bootstrap.bat
loader/test/: file_cache_test.py
loader/test/paradicms_gui_test/: conftest.py
loader/test/paradicms_gui_test/deployers/: fs_deployer_test.py  s3_deployer_test.py
loader/test/paradicms_gui_test/image_archivers/: fs_image_archiver_test.py  s3_image_archiver_test.py
loader/test/paradicms_gui_test/loaders/: app_package_test.py  fs_gui_deployer_test.py  gui_loader_test.py  gui_original_image_file_cache_test.py  gui_package_test.py  nop_image_archiver.py  s3_gui_deployer_test.py
(+5869 files in other folders)
