[flake8]
ignore = E501

[metadata]
author = Minor Gordon
author_email = info@paradicms.org
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description = "Paradicms Extract-Transform-Load (ETL) library"
license = GPLv3
license_file = LICENSE
name = paradicms-etl
url = https://github.com/paradicms/paradicms
version = attr: paradicms_etl.__version__

[options]
include_package_data = True
install_requires =
    boto3==1.16.11
	boto3-stubs==1.16.11.0
    ConfigArgParse==1.0
	markdown-it-py[plugins]==1.1.0
    mypy-boto3-cloudfront==1.16.11.0
    mypy-boto3-route53==1.16.11.0
    mypy-boto3-s3==1.16.11.0
    pathvalidate==0.29.0
    Pillow==8.2.0
	PyYAML==5.4.1
    pyformance==0.4
    rdflib==5.0.0
    rdflib-jsonld==0.5.0
    tqdm==4.45.0
packages = find:
python_requires = ~=3.6

[options.extras_require]
testing =
    pytest

[pep8]
ignore = E501
