[tool.poetry]
name = "paradicms-etl"
version = "0.0.1"
description = "Paradicms Extract-Transform-Load (ETL) library"
authors = ["Minor Gordon <info@paradicms.org>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
ConfigArgParse = "^1.5.3"
markdown-it-py = {extras = ["plugins"], version = "^2.0.1"}
pathvalidate = "^2.5.0"
Pillow = "^9.0.1"
PyYAML = "^6.0"
pyformance = "^0.4"
rdflib = "^6.1.1"
stringcase = "^1.2.0"
tqdm = "^4.62.3"
openpyxl = "^3.1.1"
inflector = "^3.1.0"
more-itertools = "^9.1.0"
beautifulsoup4 = "^4.12.2"
dataclasses-json = "^0.5.13"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.931"
pytest = "^7.0.1"
types-PyYAML = "^6.0.5"

[tool.poetry.group.dev.dependencies]
setuptools = "^68.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
