[tool.poetry]
name = "paradicms-nlp"
version = "0.0.1"
description = ""
authors = ["Minor G. <minorg@server.fake>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
python-dateutil = "^2.8.2"
types-python-dateutil = "^2.8.19.14"
spacy = "3.6.1"
# en-core-web-md = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.6.0/en_core_web_md-3.6.0-py3-none-any.whl"}
# en-core-web-lg = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.6.0/en_core_web_lg-3.6.0-py3-none-any.whl"}
en-core-web-trf = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.6.1/en_core_web_trf-3.6.1-py3-none-any.whl" }
spacy-wordnet = "^0.1.0"
pdftotext = "^2.2.2"
pdfminer-six = "^20221105"
spacy-llm = "^0.4.3"
tiktoken = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
mypy = "^0.981"
paradicms-etl = { path = "../etl", develop = true }
paradicms-ssg = { path = "../ssg", develop = true }
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
