[tool.poetry]
name = "paradicms-ssg"
version = "0.0.1"
description = ""
authors = ["Minor G. <minorg@server.fake>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
boto3 = "1.16.11"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
boto3-stubs = "1.16.11.0"
flake8 = "^4.0.1"
mypy = "^0.931"
mypy-boto3-cloudfront = "1.16.11.0"
mypy-boto3-route53 = "1.16.11.0"
mypy-boto3-s3 = "1.16.11.0"
paradicms-etl = { path = "../etl", develop = true }
pytest = "^7.0.1"
types-pyyaml = "^6.0.12.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
